style.css
/* ... */
html, html body {
    /* height: 100%; */
    width: 100%;
}

body {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    height: fit-content;
}

body {
    padding: 0;
    margin: 0;
    gap: 30px;
    padding-top: 20px;
    background: #2c3e50;
    color: #ecf0f1;
    scroll-behavior: smooth;
}

footer {
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: rgba(18, 18, 18, 0.7);
    color: white;
    text-align: center;
    padding: 24px 0px;
    font-size: 20px;
    font-family: var(--header-font);
}

#particles-js {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    background: linear-gradient(135deg, #2c3e50, #34495e);
}

.title-container {
    margin: auto 0px;
    background: rgba(255, 255, 255, 0.15);
    padding: 3rem 10rem;
    border-radius: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    text-align: center;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 15px;
}

.title-container h1 {
    font-family: var(--header-font);
    font-size: 40px;
    margin: 0px;
    text-transform: lowercase;
}

.title-container p {
    font-family: var(--body-font);
    margin: 0px;
    text-transform: lowercase;
}

.nav-buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin: 0px;
    margin-top: 10px;
}

button.past-projects,
button.about,
button.contact,
button.home {
    /* font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif; */
    font-family: var(--button-font);
    display: inline-block;
    cursor: pointer;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    transition: all 250ms;
    border: 0;
    font-size: 16px;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    margin: 5px 9px;
    border-radius: 100px;
    text-transform: lowercase;
}

button.past-projects {
    background-color: #f98585;
    box-shadow: rgba(187, 44, 44, .2) 0 -25px 18px -14px inset, rgba(187, 44, 44, .15) 0 1px 2px, rgba(187, 44, 44, .15) 0 2px 4px, rgba(187, 44, 44, .15) 0 4px 8px, rgba(187, 44, 44, .15) 0 8px 16px, rgba(187, 44, 44, .15) 0 16px 32px;
    color: rgb(128, 0, 0);
}

button.past-projects:hover {
    box-shadow: rgba(187, 44, 44, .35) 0 -25px 18px -14px inset, rgba(187, 44, 44, .25) 0 1px 2px, rgba(187, 44, 44, .25) 0 2px 4px, rgba(187, 44, 44, .25) 0 4px 8px, rgba(187, 44, 44, .25) 0 8px 16px, rgba(187, 44, 44, .25) 0 16px 32px;
    transform: scale(1.05) rotate(-1deg);
}

button.about {
    background-color: #c2fbd7;
    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
    color: green;
}

button.about:hover {
    box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
    transform: scale(1.05) rotate(-1deg);
}

button.contact {
    background-color: #85a9f9;
    border-radius: 100px;
    box-shadow: rgba(44, 44, 187, .2) 0 -25px 18px -14px inset, rgba(44, 44, 187, .15) 0 1px 2px, rgba(44, 44, 187, .15) 0 2px 4px, rgba(44, 44, 187, .15) 0 4px 8px, rgba(44, 44, 187, .15) 0 8px 16px, rgba(44, 44, 187, .15) 0 16px 32px;
    color: rgb(0, 0, 128);
}

button.contact:hover {
    box-shadow: rgba(44, 44, 187, .35) 0 -25px 18px -14px inset, rgba(44, 44, 187, .25) 0 1px 2px, rgba(44, 44, 187, .25) 0 2px 4px, rgba(44, 44, 187, .25) 0 4px 8px, rgba(44, 44, 187, .25) 0 8px 16px, rgba(44, 44, 187, .25) 0 16px 32px;
    transform: scale(1.05) rotate(-1deg);
}


button.home {
    background-color: #ffffff;
    border-radius: 100px;
    box-shadow: rgba(200, 200, 200, .2) 0 -25px 18px -14px inset, rgba(200, 200, 200, .15) 0 1px 2px, rgba(200, 200, 200, .15) 0 2px 4px, rgba(200, 200, 200, .15) 0 4px 8px, rgba(200, 200, 200, .15) 0 8px 16px, rgba(200, 200, 200, .15) 0 16px 32px;
    color: rgb(0, 0, 0);
}

button.home:hover {
    box-shadow: rgba(200, 200, 200, .35) 0 -25px 18px -14px inset, rgba(200, 200, 200, .25) 0 1px 2px, rgba(200, 200, 200, .25) 0 2px 4px, rgba(200, 200, 200, .25) 0 4px 8px, rgba(200, 200, 200, .25) 0 8px 16px, rgba(200, 200, 200, .25) 0 16px 32px;
    transform: scale(1.05) rotate(-1deg);
}

button.github-link {
    appearance: none;
    background-color: #000000;
    border: 2px solid #1A1A1A;
    border-radius: 15px;
    box-sizing: border-box;
    color: #FFFFFF;
    cursor: pointer;
    display: inline-block;
    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 16px;
    font-weight: 600;
    line-height: normal;
    margin: 0;
    min-width: 0;
    outline: none;
    padding: 12px 24px;
    text-align: center;
    text-decoration: none;
    transition: all 450ms cubic-bezier(.23, 1, 0.32, 1);
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    width: fit-content;
    will-change: transform;
}

button.github-link:disabled {
    pointer-events: none;
}

button.github-link:hover {
    background-color: #FFFFFF;
    color: #000000;
    transition: all 450ms cubic-bezier(.23, 1, 0.32, 1);
}

button.github-link:active {
    box-shadow: none;
    transform: translateY(0);
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    background: rgba(255, 255, 255, 0.1);
    margin: 0px;
    padding: 60px 35px;
    border-radius: 20px;
    height: fit-content;
    width: 100%;
    gap: 20px;
}
/* ... */

